Add exception handling integration and throw exceptions randomly

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,6 +23,10 @@
     <input type="submit">
 </form>
 
+<h2>JSON request</h2>
+<code>
+curl -i -H "Content-Type: application/json" -X POST -d '{ "body": "new one" }' http://localhost:8080/reucon-commons-example-war/example/form
+</code>
 
 </body>
 </html>
